gitfleet/tests/snapshots/cli__help_config.snap
---
source: gitfleet/tests/cli.rs
expression: output
---
Configuration management

Usage: gitfleet config [OPTIONS] <COMMAND>

Commands:
  set    Set a configuration value.
  get    Get a configuration value.
  unset  Unset a configuration value.
  help   Print this message or the help of the given subcommand(s)

Options:
      --json           
      --debug          
      --theme <THEME>  [default: auto]
      --yes            
      --dry-run        
  -h, --help           Print help
